infra/productpage/bookinfo-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: bookinfo
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /productpage
            pathType: Exact
            backend:
              service:
                name: productpage
                port:
                  number: 9080
          - path: /static/
            pathType: Prefix
            backend:
              service:
                name: productpage
                port:
                  number: 9080
          - path: /login
            pathType: Exact
            backend:
              service:
                name: productpage
                port:
                  number: 9080
          - path: /logout
            pathType: Exact
            backend:
              service:
                name: productpage
                port:
                  number: 9080
          - path: /api/v1/products
            pathType: Prefix
            backend:
              service:
                name: productpage
                port:
                  number: 9080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-svc
                port:
                  number: 9080
---
## Service 作成
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: bookinfo
spec:
  selector:
    app: nginx
  ports:
    - port: 9080
      protocol: TCP
      targetPort: 80
---
### Deployment 作成
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
  namespace: bookinfo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "0.5"
              memory: "512Mi"
            requests:
              cpu: "0.5"
              memory: "256Mi"
